--- a/pages/bookSearch/index.wxml
+++ b/pages/bookSearch/index.wxml
@@ -34,7 +34,7 @@
   </view>
 
   <!-- loading -->
-  <view wx:if="{{isLoading == '加载中'}}" class="remind-box">
+  <view wx:if="{{isLoading == '加载中'}}" class="remind-box" style='margin-top:-250px;'>
     <image class="remind-img" src="/images/loading.gif"></image>
   </view>
 
