--- a/pages/features/features.wxss
+++ b/pages/features/features.wxss
@@ -68,3 +68,52 @@ button {
   border-radius: 25px;
   margin: 40rpx 3%;
 }
+
+/**功能导航**/
+
+.main-core {
+  display: flex;
+  flex-flow: row wrap;
+  align-content: flex-start;
+  background: #fff;
+  border-bottom: 1rpx solid #e5e5e5;
+  padding: 15rpx 10rpx 10rpx;
+  min-height: 350rpx;
+  overflow: hidden;
+}
+
+.main-core-item {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  width: 20%;
+  height: 170rpx;
+}
+
+.main-core-item.disabled {
+  color: #9c9c9c;
+}
+
+.core-item-icon {
+  display: block;
+  width: 85rpx;
+  height: 85rpx;
+  margin: 15rpx auto;
+}
+
+.core-item-name {
+  display: block;
+  margin: 5rpx;
+}
+
+.main-swpier {
+  height: 390rpx;
+  margin-bottom: 20rpx;
+}
+
+.main-swpier .wx-swiper-dots.wx-swiper-dots-horizontal {
+  bottom: 0;
+  margin-bottom: -5rpx;
+}
