--- a/pages/bookSearch/bookInfo/isbn/iputIsbn.wxml
+++ b/pages/bookSearch/bookInfo/isbn/iputIsbn.wxml
@@ -10,7 +10,7 @@
       </view>
       <button class="confirm-btn " type="primary" form-type="submit">查书</button>
       <button class="confirm-btn " type="primary" plain="true" bindtap='scan'>
-        <image class="weui-btn shareIcon" src='/images/scanCode.png'></image>直接扫描ISBN</button>
+        扫描ISBN</button>
     </form>
   </view>
 </view>
