--- a/pages/tel/departmentTel/departmentTel.wxss
+++ b/pages/tel/departmentTel/departmentTel.wxss
@@ -5,6 +5,37 @@ Page {
   background-color: #7acfa6;
 }
 
+.page__hd {
+  padding: 40px;
+}
+
+.page__bd {
+  padding-bottom: 40px;
+}
+
+.page__bd_spacing {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.page__ft {
+  padding-bottom: 10px;
+  text-align: center;
+}
+
+.page__title {
+  text-align: left;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.page__desc {
+  margin-top: 5px;
+  color: #888;
+  text-align: left;
+  font-size: 14px;
+}
+
 .ads {
   padding: 30rpx 15rpx 30rpx 15rpx;
 }
