--- a/pages/schoolNav/schoolNav.wxml
+++ b/pages/schoolNav/schoolNav.wxml
@@ -1,3 +1,4 @@
+<!--pages/schoolNav/schoolNav.wxml-->
 <view class="page">
   <view class="page__bd">
     <!-- 广告位 -->
@@ -9,25 +10,15 @@
       <view class='page'>
         <view class='setCenter'>
           <text>\n</text>
-          <view class="weui-article__h2">现在是：{{time}}</view>
-          <image src='https://airmole.cn/wechat/wxapp/images/18-19I.png' mode='widthFix'></image>
+          <view class="weui-article__h2">建议手机横屏观看</view>
+          <image src='https://airmole.cn/wechat/wxapp/images/SchoolMap.png' mode='widthFix'></image>
         </view>
       </view>
     </view>
-
-    <!-- <view class="weui-tab__content">
-        <view class='page'>
-          <view class='setCenter'>
-            <text>\n</text>
-            <view class="weui-article__h2">建议手机横屏观看</view>
-            <image src='https://airmole.cn/wechat/wxapp/images/SchoolMap.png' mode='widthFix'></image>
-          </view>
-        </view>
-      </view> -->
   </view>
 </view>
 <button open-type="share" class="login-btn">
-  <text>分享校历给同学</text>
+  <text>分享给同学</text>
 </button>
 <view class="weui-footer">
   <view class="weui-footer__links">
