--- a/pages/bookSearch/bookInfo/isbn/iputIsbn.wxss
+++ b/pages/bookSearch/bookInfo/isbn/iputIsbn.wxss
@@ -67,8 +67,8 @@ Page {
   display: flex;
   flex-direction: column;
   margin: 0 30rpx 30rpx;
-  background: rgba(255, 255, 255, 0.3);
-  border-radius: 15px;
+  background: rgba(255, 255, 255, 0.4);
+  border-radius: 25rpx;
   box-shadow: 5rpx 5rpx 15rpx #ccc;
 }
 
