--- a/pages/tel/departmentTel/departmentTel.wxss
+++ b/pages/tel/departmentTel/departmentTel.wxss
@@ -50,8 +50,8 @@ Page {
   display: flex;
   flex-direction: column;
   margin: 0 30rpx 30rpx;
-  background: rgba(255, 255, 255, 0.3);
-  border-radius: 25px;
+  background: rgba(255, 255, 255, 0.4);
+  border-radius: 25rpx;
   box-shadow: 5rpx 5rpx 15rpx #ccc;
 }
 
@@ -106,5 +106,5 @@ Page {
   text-align: center;
   border-radius: 25px;
   box-shadow: 5rpx 5rpx 15rpx #ccc;
-  margin: 0 30rpx 30rpx;
+  margin: 30rpx 30rpx 30rpx;
 }
