终于把We重邮的课表界面搬过来了
界面样式基本可以用了，下一步，等教务开了调试后端接口和前后对接。

--- a/pages/classQuery/index.wxml
+++ b/pages/classQuery/index.wxml
@@ -1,5 +1,5 @@
-<scroll-view scroll-x scroll-y>
-  <view>
+<scroll-view scroll-x scroll-y style='height:{{tableHeight}};'>
+  <view style='height:{{tableHeight}};'>
     <view class="top">
       <view class="top-text">周一</view>
       <view class="top-text">周二</view>
