优化小改，日常备份

--- a/pages/schoolNav/schoolNav.wxml
+++ b/pages/schoolNav/schoolNav.wxml
@@ -22,8 +22,8 @@
           <view class='page'>
             <view style='width:100%;height:{{mapHeight}}px;'>
               <map id="navi_map" longitude="117.396018" latitude="39.545546" scale="16" markers="{{markers}}" polyline="{{polyline}}" style='height:{{mapHeight-80}}px' bindmarkertap="makertap" show-location></map>
-              <view wx:if="{{inSchool}}">
-                <view class="map_text" style='padding-bottom:25rpx;'>
+              <view wx:if="{{inSchool}}" class='mapBK'>
+                <view class="map_text">
                   <text class="h1">{{textData.name}}</text>
                   <text>{{textData.desc}}</text>
                 </view>
