--- a/pages/tel/tel.wxss
+++ b/pages/tel/tel.wxss
@@ -1,5 +1,5 @@
 /* pages/tel/departmentTel.wxss */
-@import "../../common/weui.wxss";
+@import "../common/weui.wxss";
 
 Page {
   background-color: #7acfa6;
