--- a/pages/bookSearch/isbn/iputIsbn.wxss
+++ b/pages/bookSearch/isbn/iputIsbn.wxss
@@ -1,10 +1,21 @@
 /* pages/bookSearch/bookInfo/isbn/iputIsbn.wxss */
-@import "../../../common/weui.wxss";
+@import "../../common/weui.wxss";
 
 Page {
   background-color: #7acfa6;
 }
 
+.login-btn {
+  font-size: 13pt;
+  line-height: 85rpx;
+  height: 85rpx;
+  background: #04c065;
+  color: #fff;
+  text-align: center;
+  border-radius: 25px;
+  box-shadow: 5rpx 5rpx 15rpx #ccc;
+  margin: 0 30rpx 30rpx;
+}
 
 .shareIcon {
   width: 26px;
