--- a/pages/electricity/electricityBind.wxss
+++ b/pages/electricity/electricityBind.wxss
@@ -1,8 +1,22 @@
 /* pages/electricity/electricityBind.wxss */
 @import '../index/index.wxss';
-.container{
+
+.container {
   height: auto;
 }
+
+.login-btn {
+  font-size: 13pt;
+  line-height: 85rpx;
+  height: 85rpx;
+  background: #04c065;
+  color: #fff;
+  text-align: center;
+  border-radius: 25px;
+  box-shadow: 5rpx 5rpx 15rpx #ccc;
+  margin: 0 30rpx 30rpx;
+}
+
 .append-title {
   position: absolute;
   top: 30rpx;
@@ -12,24 +26,28 @@
   line-height: 200%;
   text-align: center;
 }
-.confirm-btn{
+
+.confirm-btn {
   margin-top: 0;
 }
+
 .append-form {
   padding: 150rpx 0 30rpx;
 }
+
 .append-form .input-group {
   padding: 20rpx 8rpx;
   margin: 30rpx 3%;
 }
+
 .append-form .input-label {
   font-size: 11pt;
   height: 20rpx;
   line-height: 20rpx;
   padding: 0 20rpx;
 }
-.append-form .input-group input,
-.append-form .input-group picker {
+
+.append-form .input-group input, .append-form .input-group picker {
   font-size: 11pt;
   padding: 0 20rpx;
 }
@@ -41,8 +59,9 @@
   font-size: 10pt;
   color: #bbb;
   margin-right: 3%;
-  opacity: .8;
+  opacity: 0.8;
 }
+
 .volunteer-help-img {
   width: 11pt;
   height: 11pt;
