--- a/pages/schoolNav/stepsLine.wxss
+++ b/pages/schoolNav/stepsLine.wxss
@@ -10,8 +10,8 @@
 .item {
   display: flex;
   padding: 0 35rpx;
-  min-height: 60px;
-  /* height: 80px; */
+  /* min-height: 60px; */
+  height: 60px;
 }
 
 .iconfont {
@@ -69,10 +69,6 @@
   content: '\e77f';
 }
 
-.walk {
-  background-color: #fff;
-}
-
 .bus {
   background-color: #ebf5fb;
 }
@@ -94,6 +90,7 @@
   position: relative;
   margin: 0 20px;
   width: 2px;
+  background-color: #7acfa6;
 }
 
 .item:first-child .split-line {
