修改美化了校园出行及其分享函数
还修改了通讯录为常用号码，

--- a/pages/Transport/Transport.wxss
+++ b/pages/Transport/Transport.wxss
@@ -1,12 +1,15 @@
 @import "../common/weui.wxss";
 
+Page {
+  background-color: #7acfa6;
+}
+
 .ads {
-  padding: 5rpx 30rpx 30rpx 30rpx;
+  padding: 0rpx 15rpx 15rpx 15rpx;
 }
 
 page, .page, .page__bd {
   height: 100%;
-  background-color: #fff;
 }
 
 image {
