--- a/app.wxss
+++ b/app.wxss
@@ -45,7 +45,7 @@ page {
   padding: 5rpx 20rpx;
   text-align: center;
   background-color: #7acfa6;
-  border-radius: 3px;
+  border-radius: 25rpx;
   border-bottom: 2px solid #4fc08d;
   color: #fff;
 }
