--- a/pages/Transport/Transport.wxml
+++ b/pages/Transport/Transport.wxml
@@ -1,4 +1,7 @@
-<view class="page">
+<view class="remind-box" wx:if="{{isLoading}}">
+  <image class="remind-img" src="/images/loading.gif"></image>
+</view>
+<view class="page" wx:else>
   <view class="page__bd">
     <view class="weui-tab">
       <view class="weui-navbar" style='background-color:#7acfa6'>
