--- a/pages/tel/tel.wxml
+++ b/pages/tel/tel.wxml
@@ -1,6 +1,9 @@
 <!--pages/tel/departmentTel.wxml-->
 <!-- 学校各系部电话号码通讯录专页 -->
-<view class="page">
+<view class="remind-box" wx:if="{{isLoading}}">
+  <image class="remind-img" src="/images/loading.gif"></image>
+</view>
+<view class="page" wx:else>
   <view class="page__hd">
     <view class="page__title">各系部联系电话</view>
     <view class="page__desc" style='color:#000;'>
