--- a/pages/calendar/calendar.wxml
+++ b/pages/calendar/calendar.wxml
@@ -1,27 +1,32 @@
-<view class="page">
-  <view class="page__bd">
-    <!-- 广告位 -->
-    <view class='ads'>
-      <ad unit-id="adunit-62f52651dd5f4ff6"></ad>
-    </view>
-    <!-- 广告位结束 -->
-    <view class="weui-tab__content">
-      <view class='page'>
-        <view class='setCenter panelBK'>
-          <view class="weui-article__h2">现在是：{{time}}</view>
-          <image src='https://airmole.cn/wechat/wxapp/images/18-19I.png' mode='widthFix'></image>
+<view class="remind-box" wx:if="{{isLoading}}">
+  <image class="remind-img" src="/images/loading.gif"></image>
+</view>
+<block wx:else>
+  <view class="page">
+    <view class="page__bd">
+      <!-- 广告位 -->
+      <view class='ads'>
+        <ad unit-id="adunit-62f52651dd5f4ff6"></ad>
+      </view>
+      <!-- 广告位结束 -->
+      <view class="weui-tab__content">
+        <view class='page'>
+          <view class='setCenter panelBK'>
+            <view class="weui-article__h2">现在是：{{time}}</view>
+            <image src='https://airmole.cn/wechat/wxapp/images/18-19I.png' mode='widthFix'></image>
+          </view>
         </view>
       </view>
     </view>
   </view>
-</view>
-<button open-type="share" class="login-btn">
-  <text>分享校历</text>
-</button>
-<view class="weui-footer">
-  <view class="weui-footer__links">
-    <navigator url="/pages/features/about" class="weui-footer__link">Airmole.</navigator>
-    <navigator url="/pages/features/about" class="weui-footer__link">智慧校园</navigator>
+  <button open-type="share" class="login-btn">
+    <text>分享校历</text>
+  </button>
+  <view class="weui-footer">
+    <view class="weui-footer__links">
+      <navigator url="/pages/features/about" class="weui-footer__link">Airmole.</navigator>
+      <navigator url="/pages/features/about" class="weui-footer__link">智慧校园</navigator>
+    </view>
+    <view class="weui-footer__text">Copyright © 2019 北京科技大学天津学院.</view>
   </view>
-  <view class="weui-footer__text">Copyright © 2019 北京科技大学天津学院.</view>
-</view>
+</block>
