--- a/pages/classQuery/class.wxml
+++ b/pages/classQuery/class.wxml
@@ -1,5 +1,4 @@
 <view class="container">
-
   <!-- 主体 -->
   <view class="main-box {{blur?'main-box-active':''}}">
     <!-- 左边课数，34节和78节marginBottom为12rpx，其他均为8rpx，课程卡片与这相同 -->
@@ -22,9 +21,8 @@
       <view class="mg-8">10</view>
       <view>11</view>
       <view>12</view>
-      <view class="kb-timeline-tri" style="top:{{timelineTop}}rpx"></view>
     </view>
-    <scroll-view class="kb-ctn" catchscroll="scrollXHandle" scroll-x="true" scroll-left="{{scroll.left}}">
+    <scroll-view class="kb-ctn" scroll-x="true" scroll-left="{{scroll.left}}">
       <!-- 头部星期数 -->
       <view class="kb-title blur-area {{blur?'blur':''}}">
         <block>
@@ -37,35 +35,47 @@
       <!-- 卡片部分 -->
       <view class="kb-cards-ctn blur-area {{blur?'blur':''}}">
         <!-- 每一列为一组 -->
-        <view class="kb-cards-column">
-          <!-- today 0周一,1周二 -->
-          <!-- 今天高亮 -->
-          <block wx:if="1">
-            <view class="kb-bg" style="background:-webkit-gradient(linear,left top,left bottom,from(#eff7ff),color-stop({{(timelineTop+4)/1260}}, #8cc4ff),to(#eff7ff));"></view>
-            <view class="kb-timeline" style="display:block;top:{{timelineTop}}rpx"></view>
-          </block>
-          <!-- 循环当天的的6节课 -->
-          <view class="kb-card {{wid%2==0?'mg-8':'mg-12'}}">
-            <!-- 循环重叠课 -->
+        <view class="kb-cards-column" wx:for="{{classJson.course}}" wx:for-index="Kkey" wx:for-item="Vvalue" wx:key="fjbbk">
 
-            <!-- 循环周数，与当前周相同或当前周为*时显示 -->
-            <view style="height:{{cards.number==2?cards.number*100:cards.number*100+9}}rpx" data-day="111" data-wid="222" data-cid="333" bindtap="showDetail" class="mg-8 kb-card-content {{cards.conflictWeeks[iweek] || (week == '*' && cards.klen > 1) ?'k-sec':''}} green">
-              <text class="kb-card-place-words">9教学楼301</text>
-              <view class="kb-card-name">
-                <text class="kb-card-name-text" style="-webkit-line-clamp:{{3*(cards.number-1)}};">么可思主义原理与毛泽东四新歌首发</text>
+          <!-- 今天提示 -->
+          <block wx:if="{{Kkey == whichDayOfWeek}}">
+            <view class="kb-bg" style="background:-webkit-gradient(linear,left top,left bottom,from(#eff7ff),color-stop({{(timelineTop+4)/1260}}, #8cc4ff),to(#eff7ff));"></view>
+          </block>
+
+          <!-- 循环周一当天的的6节课 -->
+          <block wx:for="{{classJson.course[Kkey]}}" wx:for-index="key" wx:for-item="value" wx:if='{{ item.courseName !== "" }}' wx:key="fjbk">
+            <!-- 有同节异周课 -->
+            <view class="kb-card mg-12" wx:if="{{value.length>1}}">
+              <view data-courseName="{{value[0].courseName}} {{value[1].courseName}} {{value[2].courseName}} {{value[3].courseName}}" data-teacher="({{value[0].teacher}}) ({{value[1].teacher}}) ({{value[2].teacher}}) ({{value[3].teacher}})" data-teachWeek="{{value[0].teachWeek}} {{value[1].teachWeek}} {{value[2].teachWeek}} {{value[3].teachWeek}}"
+                data-place="({{value[0].place}}) ({{value[1].place}}) ({{value[2].place}}) ({{value[3].place}})" data-startTime="({{value[0].startTime}}) ({{value[1].startTime}}) ({{value[2].startTime}}) ({{value[3].startTime}})" data-endTime="({{value[0].endTime}}) ({{value[1].endTime}}) ({{value[2].endTime}}) ({{value[3].endTime}})"
+                bindtap="showDetail" class="mg-8 kb-card-content green">
+                <text class="kb-card-place-words">{{value.length}}项课程同节异周</text>
+                <view class="kb-card-name">
+                  <text class="kb-card-name-text" style="-webkit-line-clamp:{{3*(cards.number-1)}};">点击展开查看</text>
+                </view>
               </view>
             </view>
-          </view>
+            <!-- 无同节异周课 -->
+            <view class="kb-card mg-12" wx:else>
+              <view data-courseName="{{value.courseName}}" data-teacher="({{value.teacher}})" data-teachWeek="{{value.teachWeek}}" data-place="({{value.place}})" data-startTime="({{value.startTime}})" data-endTime="({{value.endTime}})" bindtap="showDetail" class="mg-8 kb-card-content green"
+                wx:if="{{ value.courseName != ''}}">
+                <text class="kb-card-place-words">{{value.place}}</text>
+                <view class="kb-card-name">
+                  <text class="kb-card-name-text" style="-webkit-line-clamp:{{3*(cards.number-1)}};">{{value.courseName}}</text>
+                </view>
+              </view>
+            </view>
+          </block>
         </view>
       </view>
 
       <!-- 遮罩层 -->
       <view bindtap="hideDetail" class="kb-detail" wx:if="{{blur}}">
         <view class="kb-detaile-card-ctn" style="top:{{targetY}}rpx;left:{{targetX}}rpx;">
-          <view style="height:{{cards.number*100}}rpx;left:{{cards.left}}rpx;" class="kb-card-content kb-detail-card-content green {{targetI == cid ? 'kb-detail-card-content-active':''}}" data-index="{{cid}}" catchtap="infoCardTap">
-            <text class="kb-card-place-words">上课地点</text>
+          <view style="height:{{cards.number*100}}rpx;left:{{cards.left}}rpx;" class="kb-card-content kb-detail-card-content green {{targetI == cid ? 'kb-detail-card-content-active':''}}" data-index="{{cid}}">
+            <text class="kb-card-place-words">{{activeClass.place}}</text>
             <view class="kb-card-name">
-              <text class="kb-card-name-text" style="-webkit-line-clamp:{{3*(cards.number-1)}};">课程名称</text>
+              <text class="kb-card-name-text" style="-webkit-line-clamp:{{3*(cards.number-1)}};">{{activeClass.coursename}}</text>
             </view>
           </view>
         </view>
@@ -77,37 +87,36 @@
   <view class="kb-info-ctn {{blur?'kb-info-ctn-open':''}}" catchtouchmove="catchMoveDetail">
     <view class="kb-info-title">
       <text class="kb-info-week">3周周三</text>
-      <text class="kb-lesson-time">2016-2018学年第1学期</text>
+      <text class="kb-lesson-time">{{classJson.schoolYear}}学年第{{classJson.semester}}学期</text>
       <image class="kb-info-card-close" src="/images/down_w.png" bindtap="hideDetail"></image>
     </view>
 
-    <view class="kb-info-card-tabs" bindtouchstart="bindStartDetail" bindtouchmove="bindMoveDetail">
+    <view class="kb-info-card-tabs">
       <view class="kb-info-card {{!cid ? '' : 'kb-info-card-shadow'}} {{targetI == cid ? 'kb-info-card-active' : 'kb-info-card-static'}}" data-index="{{cid}}" bindtap="infoCardTap">
         <view class="kb-info-card-content">
           <view class="info-name">
-            <text>课程名</text>
+            <text>{{activeClass.coursename}}</text>
           </view>
           <view class="info-bd">
             <view class="info-type">
-              <text>实验</text>
+              <text>课程</text>
             </view>
             <view class="info-list">
               <text class="info-text">1</text>
               <view class="info-item">
-                <text class="info-item-value">任课老师</text>（任课教师）
+                <text class="info-item-value">任课教师 </text> {{activeClass.teacher}}
               </view>
               <view class="info-item">
-                <text class="info-item-value">上课地点</text>（上课地点）
+                <text class="info-item-value">上课地点 </text> {{activeClass.place}}
               </view>
               <view class="info-item">
-                <text class="info-item-value">上课周</text>（课程周数）
+                <text class="info-item-value">上课周 </text> {{activeClass.teachweek}}
               </view>
               <view class="info-item">
-                <text class="info-item-value">上课班级</text>（教学班）
+                <text class="info-item-value">上课时间 </text> {{activeClass.starttime}}
               </view>
               <view class="info-item">
-                <image class="info-item-icon" src="/images/xs.png"></image>
-                <navigator open-type="redirect" url="/">查看学生名单</navigator>
+                <text class="info-item-value">下课时间 </text> {{activeClass.endtime}}
               </view>
             </view>
           </view>
@@ -115,5 +124,4 @@
       </view>
     </view>
   </view>
-
 </view>
